--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -200,12 +200,12 @@
 			<fieldset>
 				<legend>Switches & read-only flags</legend>
 				<button data-prop="alphaBars">alphaBars</button>
+				<button data-prop="ledBars">ledBars</button>
 				<button data-prop="loRes">loRes</button>
 				<button data-prop="lumiBars">lumiBars</button>
 				<button data-prop="outlineBars">outlineBars</button>
 				<button data-prop="showBgColor">showBgColor</button>
 				<button data-prop="showFPS">showFPS</button>
-				<button data-prop="showLeds">showLeds</button>
 				<button data-prop="showPeaks">showPeaks</button>
 				<button data-prop="showScaleX">showScaleX</button>
 				<button data-prop="showScaleY">showScaleY</button>
@@ -213,7 +213,7 @@
 				<button data-prop="stereo">stereo</button>
 				<hr>
 				<span class="flag" data-flag="isAlphaBars">isAlphaBars</span>
-				<span class="flag" data-flag="isLedDisplay">isLedDisplay</span>
+				<span class="flag" data-flag="isLedBars">isLedBars</span>
 				<span class="flag" data-flag="isLumiBars">isLumiBars</span>
 				<span class="flag" data-flag="isOctaveBands">isOctaveBands</span>
 				<span class="flag" data-flag="isOutlineBars">isOutlineBars</span>
