--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -126,7 +126,7 @@
 			</fieldset>
 
 			<fieldset>
-				<legend>mode 10 only</legend>
+				<legend>mode 10 / outlineBars</legend>
 				<label class="label">lineWidth
 					<input type="range" id="line_width" min="0" max="5" step="1" data-setting="lineWidth">
 					<div class="value"></div>
@@ -184,16 +184,18 @@
 		</div>
 
 		<div class="box center">
-			<button data-prop="showBgColor">showBgColor</button>
-			<button data-prop="showPeaks">showPeaks</button>
-			<button data-prop="showLeds">showLeds</button>
+			<button data-prop="alphaBars">alphaBars</button>
+			<button data-prop="ledBars">ledBars</button>
 			<button data-prop="lumiBars">lumiBars</button>
+			<button data-prop="outlineBars">outlineBars</button>
+			<button data-prop="loRes">loRes</button>
+			<button data-prop="splitGradient">splitGradient</button>
+			<button data-prop="stereo">stereo</button>
+			<button data-prop="showBgColor">showBgColor</button>
+			<button data-prop="showFPS">showFPS</button>
+			<button data-prop="showPeaks">showPeaks</button>
 			<button data-prop="showScaleX">showScaleX</button>
 			<button data-prop="showScaleY">showScaleY</button>
-			<button data-prop="stereo">stereo</button>
-			<button data-prop="splitGradient">splitGradient</button>
-			<button data-prop="loRes">loRes</button>
-			<button data-prop="showFPS">showFPS</button>
 		</div>
 	</div>
 
