--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -201,16 +201,18 @@
 				<legend>Switches & read-only flags</legend>
 				<button data-prop="alphaBars">alphaBars</button>
 				<button data-prop="ledBars">ledBars</button>
+				<button data-prop="linearAmplitude">linearAmplitude</button>
 				<button data-prop="loRes">loRes</button>
 				<button data-prop="lumiBars">lumiBars</button>
+				<button data-prop="noteLabels">noteLabels</button>
 				<button data-prop="outlineBars">outlineBars</button>
+				<button data-prop="splitGradient">splitGradient</button>
+				<button data-prop="stereo">stereo</button><br>
 				<button data-prop="showBgColor">showBgColor</button>
 				<button data-prop="showFPS">showFPS</button>
 				<button data-prop="showPeaks">showPeaks</button>
 				<button data-prop="showScaleX">showScaleX</button>
 				<button data-prop="showScaleY">showScaleY</button>
-				<button data-prop="splitGradient">splitGradient</button>
-				<button data-prop="stereo">stereo</button>
 				<hr>
 				<span class="flag" data-flag="isAlphaBars">isAlphaBars</span>
 				<span class="flag" data-flag="isLedBars">isLedBars</span>
