--- a/demo/multi.html
+++ b/demo/multi.html
@@ -173,7 +173,9 @@
 		<div class="box">
 			<button data-prop="alphaBars">alphaBars</button>
 			<button data-prop="ledBars">ledBars</button>
+			<button data-prop="linearAmplitude">linearAmplitude</button>
 			<button data-prop="lumiBars">lumiBars</button>
+			<button data-prop="noteLabels">noteLabels</button>
 			<button data-prop="outlineBars">outlineBars</button>
 			<button data-prop="loRes">loRes</button>
 			<button data-prop="splitGradient">splitGradient</button>
