--- a/tools/octave-bands-viewer.html
+++ b/tools/octave-bands-viewer.html
@@ -82,8 +82,6 @@
 		<thead>
 			<tr>
 				<th rowspan="2"><span class="info" data-text="Index in the array returned by getBars()">Bar #</span></th>
-				<th rowspan="2">Octave</th>
-				<th rowspan="2"><span class="info" data-text="Musical note represented by the central frequency of the bar">Pitch</span></th>
 				<th colspan="3">Frequency range (Hz)</th>
 				<th colspan="2"><span class="info" data-text="FFT bin selected for the lower edge">Lower FFT bin</span></th>
 				<th colspan="2"><span class="info" data-text="FFT bin selected for the upper edge">Upper FFT bin</span></th>
@@ -93,9 +91,9 @@
 				<th>Center</th>
 				<th>Upper</th>
 				<th><span class="info" data-text="FFT bin index">#</span></th>
-				<th><span class="info" data-text="Actual frequencies and interpolation ratio used">Frequency (Hz)</span></th>
+				<th><span class="info" data-text="Actual FFT frequencies and interpolation ratio applied">Frequency (Hz)</span></th>
 				<th><span class="info" data-text="FFT bin index">#</span></th>
-				<th><span class="info" data-text="Actual frequencies and interpolation ratio used">Frequency (Hz)</span></th>
+				<th><span class="info" data-text="Actual FFT frequencies and interpolation ratio applied">Frequency (Hz)</span></th>
 			</th>
 		</thead>
 		<tbody>
@@ -123,35 +121,18 @@
 
 		bodyBands.innerHTML = '';
 
-		let prevOctave = -1,
-			octaveChanges = 0,
-			count = 0;
-
 		analyzerBars.forEach( ( bar, index ) => {
-
-			let html = `<tr${ bar.disabled ? ' class="disabled" title="This bar will not be generated because its center frequency is out of the selected range"' : '' }><td class="center">${ bar.disabled ? '-' : count }`;
-
-			if ( ! bar.disabled )
-				count++;
-
-			if ( bar.octave != prevOctave ) {
-				prevOctave = bar.octave;
-				octaveChanges++;
-				let rows = 1;
-				while ( analyzerBars[ index + rows ] && analyzerBars[ index + rows ].octave == bar.octave )
-					rows++;
-				html += `<td rowspan="${rows}" class="center${ octaveChanges % 2 ? ' odd' : ' even' }">${bar.octave}`;
-			}
-
-			html += `
-				<td class="center">${ bar.note }
-				<td class="center${ bar.clamped == 'l' ? ' clamped" title="Lower edge will be clamped to ' + minFreq + 'Hz (minFreq)' : '' }">${ normalize( bar.freqLo ) }
-				<td class="center">${ normalize( bar.freq ) }
-				<td class="center${ bar.clamped == 'u' ? ' clamped" title="Upper edge will be clamped to ' + maxFreq + 'Hz (maxFreq)' : '' }">${ normalize( bar.freqHi ) }
-				<td>${ bar.binLo }
-				<td title="Interpolation ratio: ${ bar.ratioLo.toFixed(3) }"><span class="bar" style="width: ${ bar.ratioLo * 100 }%"></span>${ binToFreq( bar.binLo ) } - ${ binToFreq( bar.binLo + 1 ) }
-				<td>${ bar.binHi }
-				<td title="Interpolation ratio: ${ bar.ratioHi.toFixed(3) }"><span class="bar" style="width: ${ bar.ratioHi * 100 }%"></span>${ binToFreq( bar.binHi ) } - ${ binToFreq( bar.binHi + 1 ) }
+			let html = `
+				<tr>
+					<td class="center">${index}</td>
+					<td class="center${ bar.clamped == 'l' ? ' clamped" title="Lower edge will be clamped to ' + minFreq + 'Hz (minFreq)' : '' }">${ normalize( bar.freqLo ) }</td>
+					<td class="center">${ normalize( bar.freq ) }</td>
+					<td class="center${ bar.clamped == 'u' ? ' clamped" title="Upper edge will be clamped to ' + maxFreq + 'Hz (maxFreq)' : '' }">${ normalize( bar.freqHi ) }</td>
+					<td>${ bar.binLo }</td>
+					<td title="Interpolation ratio: ${ bar.ratioLo.toFixed(3) }"><span class="bar" style="width: ${ bar.ratioLo * 100 }%"></span>${ binToFreq( bar.binLo ) } - ${ binToFreq( bar.binLo + 1 ) }</td>
+					<td>${ bar.binHi }</td>
+					<td title="Interpolation ratio: ${ bar.ratioHi.toFixed(3) }"><span class="bar" style="width: ${ bar.ratioHi * 100 }%"></span>${ binToFreq( bar.binHi ) } - ${ binToFreq( bar.binHi + 1 ) }</td>
+				</tr>
 			`;
 			bodyBands.innerHTML += html;
 		});
