Additional options for minFreq and maxFreq on fluid demo.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -77,6 +77,7 @@
 			<label class="label">minFreq
 				<select data-setting="minFreq">
 					<option value="10">10</option>
+					<option value="16">16</option>
 					<option value="20">20</option>
 					<option value="30">30</option>
 					<option value="40">40</option>
@@ -95,6 +96,7 @@
 					<option value="16000">16000</option>
 					<option value="20000">20000</option>
 					<option value="22000">22000</option>
+					<option value="24000">24000</option>
 				</select>
 			</label>
 
