--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -202,6 +202,7 @@
 			<fieldset>
 				<legend>Switches & read-only flags</legend>
 				<button data-prop="alphaBars">alphaBars</button>
+				<button data-prop="ansiBands">ansiBands</button>
 				<button data-prop="ledBars">ledBars</button>
 				<button data-prop="linearAmplitude">linearAmplitude</button>
 				<button data-prop="loRes">loRes</button>
