--- a/demo/multi.html
+++ b/demo/multi.html
@@ -172,6 +172,7 @@
 
 		<div class="box">
 			<button data-prop="alphaBars">alphaBars</button>
+			<button data-prop="ansiBands">ansiBands</button>
 			<button data-prop="ledBars">ledBars</button>
 			<button data-prop="linearAmplitude">linearAmplitude</button>
 			<button data-prop="lumiBars">lumiBars</button>
