--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -185,6 +185,7 @@
 
 		<div class="box center">
 			<button data-prop="alphaBars">alphaBars</button>
+			<button data-prop="ansiBands">ansiBands</button>
 			<button data-prop="ledBars">ledBars</button>
 			<button data-prop="linearAmplitude">linearAmplitude</button>
 			<button data-prop="lumiBars">lumiBars</button>
