Initial tests with weighting filters.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -100,6 +100,14 @@
 				</select>
 			</label>
 
+			<label class="label">weightingMode
+				<select data-setting="weightingMode">
+					<option value="0">none</option>
+					<option value="1">ITU-R 468</option>
+					<option value="2">A-weighting</option>
+				</select>
+			</label>
+
 			<label class="label">minDecibels
 				<input type="range" min="-100" max="-60" step="5" data-setting="minDecibels">
 				<div class="value"></div>
