Add B-, C- and D-weighting filters.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -102,9 +102,12 @@
 
 			<label class="label">weightingMode
 				<select data-setting="weightingMode">
-					<option value="0">none</option>
-					<option value="1">ITU-R 468</option>
-					<option value="2">A-weighting</option>
+					<option value="">none</option>
+					<option value="I">ITU-R 468</option>
+					<option value="A">A-weighting</option>
+					<option value="B">B-weighting</option>
+					<option value="C">C-weighting</option>
+					<option value="D">D-weighting</option>
 				</select>
 			</label>
 
