Rename `weightingMode` to `weightingFilter`; some code cleanup.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -100,14 +100,14 @@
 				</select>
 			</label>
 
-			<label class="label">weightingMode
-				<select data-setting="weightingMode">
+			<label class="label">weightingFilter
+				<select data-setting="weightingFilter">
 					<option value="">none</option>
-					<option value="I">ITU-R 468</option>
 					<option value="A">A-weighting</option>
 					<option value="B">B-weighting</option>
 					<option value="C">C-weighting</option>
 					<option value="D">D-weighting</option>
+					<option value="468">ITU-R 468</option>
 				</select>
 			</label>
 
