Add graphs to the filters viewer tool; tools' CSS cleanup.

--- a/tools/octave-bands-viewer.html
+++ b/tools/octave-bands-viewer.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div class="options">
+<div class="container">
 	<div>
 		<h1>audioMotion-analyzer</h1>
 		<h2>octave bands viewer tool</h2>
