--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			name: 'audioMotion-analyzer',
 			repo: 'https://github.com/hvianna/audioMotion-analyzer',
 			auto2top: true,
-			noCompileLinks: ['/demo/.*'],
+			noCompileLinks: [ '/demo/.*', '/tools/.*' ],
 			coverpage: 'coverpage.md',
 			search: {
 				depth: 3,
