--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -111,8 +111,13 @@
 				</select>
 			</label>
 
+			<label class="label">linearBoost
+				<input type="range" min="1" max="4" step=".2" data-setting="linearBoost">
+				<div class="value"></div>
+			</label>
+
 			<label class="label">minDecibels
-				<input type="range" min="-100" max="-60" step="5" data-setting="minDecibels">
+				<input type="range" min="-120" max="-60" step="5" data-setting="minDecibels">
 				<div class="value"></div>
 			</label>
 
