--- a/demo/multi.html
+++ b/demo/multi.html
@@ -90,6 +90,22 @@
 				</select>
 			</label>
 
+			<label class="label">weightingFilter
+				<select data-setting="weightingFilter">
+					<option value="">none</option>
+					<option value="A">A-weighting</option>
+					<option value="B">B-weighting</option>
+					<option value="C">C-weighting</option>
+					<option value="D">D-weighting</option>
+					<option value="468">ITU-R 468</option>
+				</select>
+			</label>
+
+			<label class="label">linearBoost
+				<input type="range" min="1" max="4" step=".2" data-setting="linearBoost">
+				<div class="value"></div>
+			</label>
+
 			<label class="label">Sensitivity
 				<input type="range" id="sensitivity" min="0" max="4">
 				<div class="value"></div>
