--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -100,6 +100,15 @@
 				</select>
 			</label>
 
+			<label class="label">frequencyScale
+				<select data-setting="frequencyScale">
+					<option value="bark">Bark</option>
+					<option value="linear">Linear</option>
+					<option value="log">Logarithmic</option>
+					<option value="mel">Mel</option>
+				</select>
+			</label>
+
 			<label class="label">weightingFilter
 				<select data-setting="weightingFilter">
 					<option value="">none</option>
