--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 				--cover-max-width: 1200px;
 				--content-max-width: 1200px;
 			}
+
+			img.align-right {
+				float: right;
+			}
 		}
 
 		.sidebar > h1 .app-name-link {
