--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -60,6 +60,36 @@
 					<option value="classic">classic</option>
 					<option value="prism">prism</option>
 					<option value="rainbow">rainbow</option>
+					<option value="SteelBlue">SteelBlue</option>
+					<option value="OrangeRed">OrangeRed</option>
+				</select>
+			</label>
+
+			<label class="label">gradientLeft
+				<select data-setting="gradientLeft">
+					<option value="classic">classic</option>
+					<option value="prism">prism</option>
+					<option value="rainbow">rainbow</option>
+					<option value="SteelBlue">SteelBlue</option>
+					<option value="OrangeRed">OrangeRed</option>
+				</select>
+			</label>
+
+			<label class="label">gradientRight
+				<select data-setting="gradientRight">
+					<option value="classic">classic</option>
+					<option value="prism">prism</option>
+					<option value="rainbow">rainbow</option>
+					<option value="SteelBlue">SteelBlue</option>
+					<option value="OrangeRed">OrangeRed</option>
+				</select>
+			</label>
+
+			<label class="label">channelLayout
+				<select data-setting="channelLayout">
+					<option value="single">single</option>
+					<option value="dualCombined">dualCombined</option>
+					<option value="dualVertical">dualVertical</option>
 				</select>
 			</label>
 
@@ -185,7 +215,7 @@
 			<fieldset>
 				<legend>mode 10 / outlineBars</legend>
 				<label class="label">lineWidth
-					<input type="range" min="0" max="5" step="1" data-setting="lineWidth">
+					<input type="range" min="0" max="4" step=".5" data-setting="lineWidth">
 					<div class="value"></div>
 				</label>
 
@@ -250,8 +280,7 @@
 				<button data-prop="lumiBars">lumiBars</button>
 				<button data-prop="noteLabels">noteLabels</button>
 				<button data-prop="outlineBars">outlineBars</button>
-				<button data-prop="splitGradient">splitGradient</button>
-				<button data-prop="stereo">stereo</button><br>
+				<button data-prop="splitGradient">splitGradient</button><br>
 				<button data-prop="showBgColor">showBgColor</button>
 				<button data-prop="showFPS">showFPS</button>
 				<button data-prop="showPeaks">showPeaks</button>
