--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -48,6 +48,36 @@
 					<option value="classic">classic</option>
 					<option value="prism">prism</option>
 					<option value="rainbow">rainbow</option>
+					<option value="SteelBlue">SteelBlue</option>
+					<option value="OrangeRed">OrangeRed</option>
+				</select>
+			</label>
+
+			<label class="label">gradientLeft
+				<select data-setting="gradientLeft">
+					<option value="classic">classic</option>
+					<option value="prism">prism</option>
+					<option value="rainbow">rainbow</option>
+					<option value="SteelBlue">SteelBlue</option>
+					<option value="OrangeRed">OrangeRed</option>
+				</select>
+			</label>
+
+			<label class="label">gradientRight
+				<select data-setting="gradientRight">
+					<option value="classic">classic</option>
+					<option value="prism">prism</option>
+					<option value="rainbow">rainbow</option>
+					<option value="SteelBlue">SteelBlue</option>
+					<option value="OrangeRed">OrangeRed</option>
+				</select>
+			</label>
+
+			<label class="label">channelLayout
+				<select data-setting="channelLayout">
+					<option value="single">single</option>
+					<option value="dualCombined">dualCombined</option>
+					<option value="dualVertical">dualVertical</option>
 				</select>
 			</label>
 
