--- a/demo/multi.html
+++ b/demo/multi.html
@@ -68,6 +68,36 @@
 					<option value="classic">classic</option>
 					<option value="prism">prism</option>
 					<option value="rainbow">rainbow</option>
+					<option value="SteelBlue">SteelBlue</option>
+					<option value="OrangeRed">OrangeRed</option>
+				</select>
+			</label>
+
+			<label class="label">gradientLeft
+				<select data-setting="gradientLeft">
+					<option value="classic">classic</option>
+					<option value="prism">prism</option>
+					<option value="rainbow">rainbow</option>
+					<option value="SteelBlue">SteelBlue</option>
+					<option value="OrangeRed">OrangeRed</option>
+				</select>
+			</label>
+
+			<label class="label">gradientRight
+				<select data-setting="gradientRight">
+					<option value="classic">classic</option>
+					<option value="prism">prism</option>
+					<option value="rainbow">rainbow</option>
+					<option value="SteelBlue">SteelBlue</option>
+					<option value="OrangeRed">OrangeRed</option>
+				</select>
+			</label>
+
+			<label class="label">channelLayout
+				<select data-setting="channelLayout">
+					<option value="single">single</option>
+					<option value="dualCombined">dualCombined</option>
+					<option value="dualVertical">dualVertical</option>
 				</select>
 			</label>
 
@@ -246,7 +276,6 @@
 			<button data-prop="outlineBars">outlineBars</button>
 			<button data-prop="loRes">loRes</button>
 			<button data-prop="splitGradient">splitGradient</button>
-			<button data-prop="stereo">stereo</button>
 			<br>
 			<button data-prop="showBgColor">showBgColor</button>
 			<button data-prop="showFPS">showFPS</button>
