Add 'orangered' and 'steelblue' to built-in gradients.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -60,8 +60,8 @@
 					<option value="classic">classic</option>
 					<option value="prism">prism</option>
 					<option value="rainbow">rainbow</option>
-					<option value="SteelBlue">SteelBlue</option>
-					<option value="OrangeRed">OrangeRed</option>
+					<option value="steelblue">steelblue</option>
+					<option value="orangered">orangered</option>
 				</select>
 			</label>
 
@@ -70,8 +70,8 @@
 					<option value="classic">classic</option>
 					<option value="prism">prism</option>
 					<option value="rainbow">rainbow</option>
-					<option value="SteelBlue">SteelBlue</option>
-					<option value="OrangeRed">OrangeRed</option>
+					<option value="steelblue">steelblue</option>
+					<option value="orangered">orangered</option>
 				</select>
 			</label>
 
@@ -80,8 +80,8 @@
 					<option value="classic">classic</option>
 					<option value="prism">prism</option>
 					<option value="rainbow">rainbow</option>
-					<option value="SteelBlue">SteelBlue</option>
-					<option value="OrangeRed">OrangeRed</option>
+					<option value="steelblue">steelblue</option>
+					<option value="orangered">orangered</option>
 				</select>
 			</label>
 
