--- a/demo/multi.html
+++ b/demo/multi.html
@@ -68,8 +68,8 @@
 					<option value="classic">classic</option>
 					<option value="prism">prism</option>
 					<option value="rainbow">rainbow</option>
-					<option value="SteelBlue">SteelBlue</option>
-					<option value="OrangeRed">OrangeRed</option>
+					<option value="steelblue">steelblue</option>
+					<option value="orangered">orangered</option>
 				</select>
 			</label>
 
@@ -78,8 +78,8 @@
 					<option value="classic">classic</option>
 					<option value="prism">prism</option>
 					<option value="rainbow">rainbow</option>
-					<option value="SteelBlue">SteelBlue</option>
-					<option value="OrangeRed">OrangeRed</option>
+					<option value="steelblue">steelblue</option>
+					<option value="orangered">orangered</option>
 				</select>
 			</label>
 
@@ -88,8 +88,8 @@
 					<option value="classic">classic</option>
 					<option value="prism">prism</option>
 					<option value="rainbow">rainbow</option>
-					<option value="SteelBlue">SteelBlue</option>
-					<option value="OrangeRed">OrangeRed</option>
+					<option value="steelblue">steelblue</option>
+					<option value="orangered">orangered</option>
 				</select>
 			</label>
 
