--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -48,8 +48,8 @@
 					<option value="classic">classic</option>
 					<option value="prism">prism</option>
 					<option value="rainbow">rainbow</option>
-					<option value="SteelBlue">SteelBlue</option>
-					<option value="OrangeRed">OrangeRed</option>
+					<option value="steelblue">steelblue</option>
+					<option value="orangered">orangered</option>
 				</select>
 			</label>
 
@@ -58,8 +58,8 @@
 					<option value="classic">classic</option>
 					<option value="prism">prism</option>
 					<option value="rainbow">rainbow</option>
-					<option value="SteelBlue">SteelBlue</option>
-					<option value="OrangeRed">OrangeRed</option>
+					<option value="steelblue">steelblue</option>
+					<option value="orangered">orangered</option>
 				</select>
 			</label>
 
@@ -68,8 +68,8 @@
 					<option value="classic">classic</option>
 					<option value="prism">prism</option>
 					<option value="rainbow">rainbow</option>
-					<option value="SteelBlue">SteelBlue</option>
-					<option value="OrangeRed">OrangeRed</option>
+					<option value="steelblue">steelblue</option>
+					<option value="orangered">orangered</option>
 				</select>
 			</label>
 
