--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -88,8 +88,8 @@
 			<label class="label">channelLayout
 				<select data-setting="channelLayout">
 					<option value="single">single</option>
-					<option value="dualCombined">dualCombined</option>
-					<option value="dualVertical">dualVertical</option>
+					<option value="dual-combined">dual-combined</option>
+					<option value="dual-vertical">dual-vertical</option>
 				</select>
 			</label>
 
