--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -76,8 +76,8 @@
 			<label class="label">channelLayout
 				<select data-setting="channelLayout">
 					<option value="single">single</option>
-					<option value="dualCombined">dualCombined</option>
-					<option value="dualVertical">dualVertical</option>
+					<option value="dual-combined">dual-combined</option>
+					<option value="dual-vertical">dual-vertical</option>
 				</select>
 			</label>
 
@@ -203,7 +203,7 @@
 			<fieldset>
 				<legend>mode 10 / outlineBars</legend>
 				<label class="label">lineWidth
-					<input type="range" id="line_width" min="0" max="5" step="1" data-setting="lineWidth">
+					<input type="range" id="line_width" min="0" max="4" step=".5" data-setting="lineWidth">
 					<div class="value"></div>
 				</label>
 
